--- a/doc/cws/manifest.json
+++ b/doc/cws/manifest.json
@@ -1,13 +1,13 @@
 {
-  "name": "note5: An HTML5 Notepad",
-  "description": "Jot down notes quickly and easily",
-  "version": "0.3.0.0",
+  "name": "h5note",
+  "description": "HTML5 Notepad: Jot down notes quickly and easily",
+  "version": "0.5.0.0",
   "app": {
     "urls": [
-      "http://note5.jasonhanley.com/"
+      "http://h5note.com/"
     ],
     "launch": {
-      "web_url": "http://note5.jasonhanley.com/"
+      "web_url": "http://h5note.com/"
     }
   },
   "icons": {
