- Updated names and versions

--- a/doc/cws/manifest.json
+++ b/doc/cws/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "h5note",
-  "description": "HTML5 Notepad: Jot down notes quickly and easily",
-  "version": "0.5.0.0",
+  "name": "HTML5 Notepad",
+  "description": "HTML5 Notepad: Note down your notes quickly and easily",
+  "version": "0.6.0.0",
   "app": {
     "urls": [
       "http://h5note.com/"
