--- a/web/.htaccess
+++ b/web/.htaccess
@@ -91,7 +91,7 @@ AddType application/x-chrome-extension crx
 
 
 # gzip compression.
-<IfModule mod_deflate.c>
+<IfModule mod_filter.c>
 
 # html, txt, css, js, json, xml, htc:
   AddOutputFilterByType DEFLATE text/html text/plain text/css application/json
